@startuml

class Specification {
    title: string
    requirements: Requirement[]
}

class Requirement {
    title: string
    text: string

    specification: Specification
    parent: Requirement | null
    children: Requirement[]
    usecases: Usecase[]
    tasks: Task[]
}

class Usecase {
    title: string

    requirements: Requirement[]
    tasks: Task[]
    steps: Step[]
}

class Step {
    action: string
}

class Task {
    title: string
    text: string

    requirements: Requirement[]
    usecases: Usecase[]
}

Specification -- Requirement : 1:N
Requirement -- Usecase : N:N
Requirement -- Task : N:N
Requirement --> Requirement : 1:N
Usecase - Task : N:N
Usecase -- Step : N:N

hide methods

@enduml